assets/scss/custom.scss
$fg-color: #212121 !default;
$link-color: #1565c0 !default;
$fg-color-dark: #dadada !default;
$link-color-dark: #42a5f5 !default;

.navigation .navigation-title {
    text-transform: none;
}

.footer {
  .social {
    text-align: center;

    h1 {
      margin-top: 2rem;
      margin-bottom: 0.5rem;
    }

    h2 {
      margin-top: 1rem;
      margin-bottom: 0.5rem;
      font-size: 2.4rem;

      @media only screen and (max-width: 768px) {
        font-size: 2rem;
      }
    }

    ul {
      list-style: none;
      margin: 3rem 0 1rem 0;
      padding: 0;
      cursor: pointer;

      li {
        display: inline-block;
        position: relative;

        a {
          color: $fg-color;
          text-transform: uppercase;
          margin-left: 1rem;
          margin-right: 1rem;
          font-size: 1.6rem;

          &:hover,
          &:focus {
            color: $link-color;
          }

          @media only screen and (max-width: 768px) {
            font-size: 1.5rem;
          }
        }
      }
    }
  }
}
@mixin content_dark {
  .footer {
    .social {
      ul {
        li {
          a {
            color: $fg-color-dark;

            &:hover,
            &:focus {
              color: $link-color-dark;
            }
          }
        }
      }
    }
  }
}

